--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
+    "pdfkit": "^0.13.0",
     "nodemon": "^3.1.10"
   }
 }
